Mon Mar 20 18:35:32 2000  George Lebl <jirka@5z.com>

	* gnome-config.c: fix segfault when loading illegal files by
	  correctly setting state after ignore.  also correctly set state
	  after premature end of line

	* gnome-dentry.c: just a minor documentation fix

2000-03-18  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-config.c
	(_gnome_config_get_translated_string_with_default): Load a value
	if the translation is not available.  Fixes the desktop icons not
	working and the launchers dissapearing.

1999-08-26  Bertrand Guiheneuf <Bertrand.Guiheneuf@inria.fr>

	* gnome-mime.c (add_to_key): Duplicate the mime key here.

2000-02-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-util.c (g_concat_dir_and_file): dir or file being NULL is
	an error.

Mon Feb 14 20:42:15 2000  Iain Holmes <ih@csd.abdn.ac.uk>

	* gnome-mime.c (gnome_mime_type_or_default): Check for an uppercase 
	version of the extension, then check for a lower case version as well
	as the requested on. An attempt to remove the need to .HTML and .html
	to exist in the gnome.mime file.

Mon Jan 17 13:59:59 2000  George Lebl <jirka@5z.com>

	* gnome-dentry.c: if we find gnome-terminal use that as
	  the default for running in the terminal instead of xterm

Sat Jan 01 18:45:26 2000  George Lebl <jirka@5z.com>

	* gnome-config.c,gnome-help.c,gnome-mime-info.c: Use LC_MESSAGES
	  instead of LC_ALL to get the language to use for translating
	  messages.  LC_ALL is used as well inside gnome-i18n anyway
	  and messages need to use LC_MESSAGES if it's set

	* gnome-help.c: s/g_fee/g_free/ in the inline docs for two functions

Mon Dec 13 23:53:20 1999  George Lebl <jirka@5z.com>

	* gnome-mime-info.c: current_lang is a list of languages.  Also
	  we store the previous key and it's language level when reading.
	  (remove_this_key) removed this function as it is replaced by
	  using g_hash_table_lookup_extended where we don't need to
	  remove/readd, but just readd with the old key